--- a/.github/workflows/fuzz-utils-buffer.yaml
+++ b/.github/workflows/fuzz-utils-buffer.yaml
@@ -26,12 +26,12 @@ jobs:
             override: true
       - name: Run utils buffer fuzz tests for 30 seconds no timeout
         run: |
-          chmod +x "./utils/buffer/fuzz-for-30-sec.sh"
-          timeout 5 script ./utils/buffer/fuzz-for-30-sec.sh || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+          # chmod +x "./utils/buffer/fuzz-for-30-sec.sh"
+          timeout 5 sh ./fuzz-for-30-sec.sh || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
       - name: Run utils buffer fuzz tests for 30 seconds timeout
         run: | 
-          chmod +x "./utils/buffer/fuzz-for-30-sec.sh"
-          timeout 1 script ./utils/buffer/fuzz-for-30-sec.sh || code =$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+          # chmod +x "./utils/buffer/fuzz-for-30-sec.sh"
+          timeout 1 sh ./fuzz-for-30-sec.sh || code =$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
     # steps:
           # - uses: actions/checkout@v2
           # - uses: actions/setup-python@v2
