--- a/.github/workflows/fuzz-utils-buffer.yaml
+++ b/.github/workflows/fuzz-utils-buffer.yaml
@@ -27,11 +27,11 @@ jobs:
       - name: Run utils buffer fuzz tests for 30 seconds no timeout
         run: |
           # chmod +x "./utils/buffer/fuzz-for-30-sec.sh"
-          timeout 5 sh ./fuzz-for-30-sec.sh || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+          timeout 5 sh ./utils/buffer/fuzz-for-30-sec.sh || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
       - name: Run utils buffer fuzz tests for 30 seconds timeout
         run: | 
           # chmod +x "./utils/buffer/fuzz-for-30-sec.sh"
-          timeout 1 sh ./fuzz-for-30-sec.sh || code =$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+          timeout 1 sh ./utils/buffer/fuzz-for-30-sec.sh || code =$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
     # steps:
           # - uses: actions/checkout@v2
           # - uses: actions/setup-python@v2
